data/derived/sp14/progs/unify/prog0659.ml.out
Characters 200-216:
  let base = (0::(List.rev l1, 0), []) in
                 ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
